package org.authenticator.protobuf;

option java_outer_classname="AuthWalletHierarchy";

enum HierarchyPurpose{
	Bip43 		= 44; 		// 0x8000002C as in Bip43
	BAGeneral   = 100; 		// 0x8000006E
}

enum HierarchyCoinTypes{
	CoinBitcoin 			= 0; // 0x80000000 as in Bip44
}

enum HierarchyAddressTypes{
	External	 			= 0; // external
	Internal				= 1; // internal / change
}

enum BAGeneralHierarchyKeys {
	ConfigFileEncryption 			= 0;
	CloudBackupEncryption			= 1;
}